WebContent/css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
    font-size: inherit;
}

@font-face {
    font-family: 'warioware';
    src: url('warioware_inc.-webfont.woff2') format('woff2'),
         url('warioware_inc.-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

html {
	font-family: Karla, Calibri, Trebuchet, sans-serif;
}

body {
    background-image: url('../img/bg_gam.png');
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url('../img/bg_gam.png');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    height: 100%;
}

#sidenav-overlay {
	z-index: 995 !important;
}

label.active {
	margin-top:8px;
}

.pagination li.active {
    background-color: #EE6E73;
    font-size: 1.2rem;
    padding: 0px 10px;
    line-height: 30px;
}

.pagination-wrapper {
	
	height: 50px; 
	max-width: 600px; 
	min-width: 70%;
	
}

.game-header {

    overflow:hidden;
    width:100%;
}

.game-title {
    font-family: warioware;
    font-size: 24px !important;
    margin-left: 10px;
    margin-top: 10px;
    background-color: #353535 !important;
    color: #FFF !important;
    display: inline-block;
    min-width: 50%;
    text-align: center;
}

.game-metadata {
    float: right;
    text-align: right;
    margin-right: 5px;
    font-size: 12px;
    display: inline-block;
    margin-top: 5px;
    overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	max-width:150px
}

.game-data {
    display: inline-block;
    float: right;
    width: 100%; 
}

.brand {
	line-height:17px; 
    font-size:15px; 
    width: 125px; 
    height: 50px; 
    text-align:center; 
    padding:7px; 
    margin-right:10px; 
    display:inline-block; 
    vertical-align: top;
    background-repeat: no-repeat;
}

.game-brand {
    background-image: url('../img/icons/game/publisher.png'); 
}

.theme-brand {
	background-image: url('../img/icons/game/theme.png') !important; 
}

.manga-brand {
    background-image: url('../img/icons/comic/publisher.png'); 
}

.record-brand {
	background-image: url('../img/icons/music/publisher.png'); 
}

.game-creator {
    width:125px; 
    text-align:center; 
    margin-top:10px; 
    border: 3px solid black; 
    border-radius:10px; 
    font-size:12px; 
}

.game-preview {

    display:inline-block; 
    float:right; 
    max-width:180px; 
    width:100%; 
    border: 3px solid black;
}

.manga-preview {
	cursor: zoom-in; 
}

.record-preview {
	cursor: pointer;
}

.manga-preview, .record-preview {

    display:inline-block; 
    float:right; 
    max-width:180px; 
    width:100%; 
    text-align: center; 
    height:100px; 
    border: none;
}

.manga-preview > img {
	background-color: #353535; 
	height: 75%; 
	margin: 10%; 
	border-radius: 5px;
}

.record-image {
	height: 104px;
	width: 104px;
	position: relative;
	margin-left: auto;
	margin-right: auto;
	background-image: url("../img/icons/music/disc.svg");
	background-repeat: no-repeat;
	background-size: 100% auto; 
}

.playing {
    -webkit-animation:spin 4s linear infinite;
    -moz-animation:spin 4s linear infinite;
    animation:spin 4s linear infinite;
}

.game-text {

    margin-bottom:-10px !important; 
    font-size: 22px !important; 
    display: inline-flex !important;
    height: 80px;
    text-overflow: ellipsis;
}

.selection-card {
	border-radius: 10px; 
	background-image:linear-gradient(to bottom, rgba(0,0,0,0.5) 0%,rgba(0,0,0,0.5) 100%), url('../img/bg_mix.png');
	min-height:166px;
	background-size: cover;
	background-position: left bottom;
}

.cart-item {
	min-height: 40px !important; 
}

.cart-icon {
	left: 20px; 
	position: absolute;
}

.cart-del {
	top: 9px !important;
	cursor: pointer;
}

.materialboxed:not(.active) {
  display:none;
}

.ellipse {
	cursor: pointer;
	margin-left:10px;
	margin-right:10px;
}

.ellipse > input {
	width:50px;
	font-size:20px;
}

@media screen and (max-width:1700px) and (min-width:992px), screen and (max-width:920px) and (min-width:600px), screen and (max-width: 420px ){

    .game-preview, .manga-preview, .record-preview {
        width:50%; 
    }


    .game-metadata {
        font-size: 12px;
        text-align: center;
        display: block;
        float: none;
        max-width: 30000px;
    }

    .game-title {
        min-width: 200%;
        margin-left: 10px;
        text-align: left;
    }
}

@media screen and (max-width:1360px) and (min-width:992px), screen and (max-width:750px) and (min-width:600px), screen and (max-width: 400px ){

    .game-preview, .manga-preview, .record-preview {
        margin-top: 10px;
        width:100%; 
        float:none;
    }
    
    .game-data {
    text-align: center;
    }


}

